# pytask_to_workflow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
apps/: CMakeLists.txt  sender.cpp
